--- a/learn-and-earn/src/app/auth/login/login.component.html
+++ b/learn-and-earn/src/app/auth/login/login.component.html
@@ -6,12 +6,12 @@
 </div>
 
 <!-- login form -->
-<div class="container-fluid" *ngIf="!isLoading">
+<div class="container text-center" *ngIf="!isLoading">
   <div class="row">
-    <div class="col-sm">
+    <div class="col-lg-6">
       <img src="../../../assets/images/logo-img.svg" class="img-fluid mt-5" alt="login">
     </div>
-     <div class="col-sm">
+     <div class="col-lg-6">
         <div class="mb-3 mt-5 form">
            <form class="row g-3" (submit)="onLogin(loginForm)" #loginForm="ngForm">
         <!-- Email -->
@@ -26,30 +26,14 @@
           ngModel #passwordInput="ngModel" required autocomplete="on" placeholder="Password"/>
           <span *ngIf="passwordInput.touched && passwordInput.invalid" class="text-danger">Please enter a valid password.</span>
         </div>
+        <!-- Login button -->
+        <button type="submit" class="btn btn-primary mb-4 col-sm-8" style="background-color: #6351ce;">Login</button>
         <!-- 2 column grid layout for inline styling -->
-        <div class="row mb-4">
-          <div class="col d-flex">
-            <!-- Checkbox -->
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                value=""
-                id="form2Example3"
-                checked
-                style="background-color: #6351ce;"
-              />
-              <label class="form-check-label" for="form2Example3">Remember me</label>
-            </div>
-          </div>
-          <div class="col">
+          <div class="mb-4 ms-4">
             <a href="#!">Forgot password?</a>
           </div>
-        </div>
-        <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block mb-4 col-sm-8" style="background-color: #6351ce;">Login</button>
         <div>
-          <p>Not a member? <button class="btn btn-outline-primary" (click)="signup()">Register</button></p>
+          <p>Not a learner? <button class="btn btn-outline-primary" (click)="signup()">Register</button></p>
         </div>
       </form>
         </div>
