--- a/learn-and-earn/src/app/auth/signup/signup.component.html
+++ b/learn-and-earn/src/app/auth/signup/signup.component.html
@@ -5,45 +5,183 @@
   </div>
 </div>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm">
-          <img src="../../../assets/images/signup-img.svg" class="img-fluid" alt="signup">
-        </div>
-        <div class="col-sm">
-          <div class="mb-3 mt-5 form">
-            <form class="row g-3" (submit)="onSignup(signupForm)" #signupForm="ngForm">
-              <!-- email -->
-              <div class="form-outline col-sm-8">
-                <input type="email" class="form-control" id="inputEmail4" name="email"
-                ngModel #emailInput="ngModel" required email placeholder="Email address or phone number" />
-                <span *ngIf="emailInput.touched && emailInput.invalid" class="text-danger">Please enter a valid email.</span>
-              </div>
-              <!-- Password -->
-              <div class="form-outline col-sm-8">
-                <input type="password" class="form-control" id="inputPassword" name="password"
-                ngModel #passwordInput="ngModel" required placeholder="Password" pattern="^[A-Za-z]\w{7,14}$"/>
-                 <div *ngIf="passwordInput.invalid && passwordInput.touched" class="text-danger">
-                    <div *ngIf="passwordInput.errors.required">Password is required.</div>
-                    <div *ngIf="passwordInput.errors.pattern">Password must contain at least 1 alphabetical character,
-                          1 numeric character, must be 8 characters or longer.</div>
-                 </div>
-              </div>
-              <!--confirm password -->
-              <div class="form-outline col-sm-8">
-                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"
-                ngModel #confirmPasswordInput="ngModel" required placeholder="Confirm Password" pattern="{{ passwordInput.value }}"/>
-                <div *ngIf="confirmPasswordInput.invalid && confirmPasswordInput.touched" class="text-danger">
-                  <div *ngIf="confirmPasswordInput.errors.required">Confirm password is required.</div>
-                  <div *ngIf="confirmPasswordInput.errors.pattern">Password and Confirm Password does not match.</div>
-               </div>
-              </div>
-              <!-- signup -->
-              <div class="col-12">
-                <button type="submit" class="btn btn-primary">Sign up</button>
-              </div>
-            </form>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm">
+      <img src="../../../assets/images/signup-img.svg" class="img-fluid" alt="signup">
+    </div>
+    <div class="col-sm">
+      <div class="mb-3 mt-5 form">
+        <form class="row g-3" (submit)="onSignup(signupForm)" #signupForm="ngForm">
+          <!-- email -->
+          <div class="form-outline col-sm-8">
+            <input type="email" class="form-control" id="inputEmail4" name="email"
+            ngModel #emailInput="ngModel" required email placeholder="Email address or phone number" />
+            <span *ngIf="emailInput.touched && emailInput.invalid" class="text-danger">Please enter a valid email.</span>
           </div>
-        </div>
+          <!-- Password -->
+          <div class="form-outline col-sm-8">
+            <input type="password" class="form-control" id="inputPassword" name="password"
+            ngModel #passwordInput="ngModel" required placeholder="Password" pattern="^[A-Za-z]\w{7,14}$"/>
+            <div *ngIf="passwordInput.invalid && passwordInput.touched" class="text-danger">
+                <div *ngIf="passwordInput.errors.required">Password is required.</div>
+                <div *ngIf="passwordInput.errors.pattern">Password must contain at least 1 alphabetical character,
+                      1 numeric character, must be 8 characters or longer.</div>
+            </div>
+          </div>
+          <!--confirm password -->
+          <div class="form-outline col-sm-8">
+            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"
+            ngModel #confirmPasswordInput="ngModel" required placeholder="Confirm Password" pattern="{{ passwordInput.value }}"/>
+            <div *ngIf="confirmPasswordInput.invalid && confirmPasswordInput.touched" class="text-danger">
+              <div *ngIf="confirmPasswordInput.errors.required">Confirm password is required.</div>
+              <div *ngIf="confirmPasswordInput.errors.pattern">Password and Confirm Password does not match.</div>
+          </div>
+          </div>
+          <!-- signup -->
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Sign up</button>
+          </div>
+        </form>
       </div>
     </div>
+  </div>
+</div>
+
+
+<!-- Footer -->
+<footer
+        class="text-center text-lg-start text-white"
+        style="background-color: #1c2331" *ngIf="!isLoading"
+        >
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 mt-4">
+          <!-- Content -->
+          <h6 class="fw-bold" style="font-family: Bodoni; font-size: xxx-large;">Learn&Earn</h6>
+          <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #7c4dff; height: 2px"/>
+          <p>
+            Practice basics of Web Development in MCQs pattern.
+            You earn points for each correct answer which you
+            can show off to peers.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 mt-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold">Products</h6>
+          <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #7c4dff; height: 2px"
+              />
+          <p>
+            <a href="#!" class="text-white">HTML</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white">CSS</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white">Javascript</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white">Bootstrap</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 mt-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold">Useful links</h6>
+          <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #7c4dff; height: 2px"
+              />
+          <p>
+            <a href="#!" class="text-white">Your Account</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white">Become an Affiliate</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white">Shipping Rates</a>
+          </p>
+          <p>
+            <a href="#!" class="text-white">Help</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 mt-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold">Contact</h6>
+          <hr
+              class="mb-4 mt-0 d-inline-block mx-auto"
+              style="width: 60px; background-color: #7c4dff; height: 2px"
+              />
+          <p><i class="bi bi-house-door mr-3" style="color: #7c4dff; font-size: 20px;"></i> Pune, Maharashtra</p>
+          <p><i class="bi bi-envelope-fill mr-3" style="color: #7c4dff; font-size: 20px;"></i> saraf.vikas5@gmail.com</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+    <!-- Section: Social media -->
+    <section
+    class="d-flex justify-content-between p-2"
+    style="background-color: #6351ce"
+    >
+<!-- Left -->
+<div class="me-5">
+<span>Get connected with us on social networks:</span>
+</div>
+<!-- Left -->
+
+<!-- Right -->
+<div>
+<a href="" class="text-white me-4">
+<i class="bi bi-facebook"></i>
+</a>
+<a href="" class="text-white me-4">
+<i class="bi bi-twitter"></i>
+</a>
+<a href="" class="text-white me-4">
+<i class="bi bi-google"></i>
+</a>
+<a href="" class="text-white me-4">
+<i class="bi bi-instagram"></i>
+</a>
+<a href="" class="text-white me-4">
+<i class="bi bi-linkedin"></i>
+</a>
+<a href="" class="text-white me-4">
+<i class="bi bi-github"></i>
+</a>
+</div>
+<!-- Right -->
+</section>
+<!-- Section: Social media -->
+
+  <!-- Copyright -->
+  <div
+        class="text-center p-3"
+        style="background-color: rgba(0, 0, 0, 0.2)"
+        >
+    © 2021 Copyright:
+    <a class="text-white" href="https://vikas-saraf.netlify.com" target="_blank">Vikas Saraf</a >
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
