--- a/learn-and-earn/src/app/navigation/navigation.component.html
+++ b/learn-and-earn/src/app/navigation/navigation.component.html
@@ -7,7 +7,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <div class="dropdown float-end me-5">
+      <div class="dropdown float-end me-5 ms-auto">
         <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
          data-bs-toggle="dropdown" aria-expanded="false">
           Account
